--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-hook-form": "^7.45.2",
     "react-icon": "^1.0.0",
     "react-icons": "^4.10.1",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.0.4",
@@ -47,6 +48,6 @@
   },
   "devDependencies": {
     "eslint-config-react-app": "^7.0.1",
-    "typescript": "^5.1.6"
+    "typescript": "^4.9.5"
   }
 }
