--- a/Backend/.env
+++ b/Backend/.env
@@ -1,4 +1,4 @@
-PORT = 5000
-DB_USER = jpgtrein
-DB_PASS = P1QCugk7XubG1zTa
-JWT_SECRET = criptomoedassaolegais
+IP_DB=0.0.0.0:27017
+CollectioDbName=criptomoedasbackend
+PORT=3000
+JWT_SECRET=criptomoedasaolegaispracaramba
