--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^3.1.1",
     "@kommunicate/kommunicate-chatbot-plugin": "0.0.6",
     "@testing-library/jest-dom": "^5.16.5",
@@ -19,6 +21,7 @@
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.0.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
