--- a/Backend/.env
+++ b/Backend/.env
@@ -2,3 +2,5 @@ IP_DB=0.0.0.0:27017
 CollectioDbName=criptomoedasbackend
 PORT=8000
 JWT_SECRET=criptomoedasaolegaispracaramba
+gmail=criptoeducasenac@gmail.com
+password=ntiq fvry xfcy xfga
